--- a/index.html
+++ b/index.html
@@ -166,7 +166,44 @@
                             <td>3</td>
                             <td>王五</td>
                             <td>广州</td>
-                            <td>95</td>
+                            <td>
+                                <table class="activities">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>姓名</th>
+                                            <th>城市</th>
+                                            <th>分数</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>张三</td>
+                                            <td>上海</td>
+                                            <td>92</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>李四</td>
+                                            <td>北京</td>
+                                            <td>88</td>
+                                        </tr>
+                                        <tr>
+                                            <td>3</td>
+                                            <td>王五</td>
+                                            <td>广州</td>
+                                            <td>95</td>
+                                        </tr>
+                                        <tr>
+                                            <td>4</td>
+                                            <td>赵六</td>
+                                            <td>深圳</td>
+                                            <td>90</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </td>
                         </tr>
                         <tr>
                             <td>4</td>
